--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-app",
+  "homepage": "http://udayakumarp2.github.io/reacthw1",
+  "name": "reacthw1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
+  
 }
